force-app/main/default/objects/BoschPartner_PartnerFunction__c/BoschPartner_PartnerFunction__c.object-meta.xml
<CustomObject>
    <label>Bosch Partner: Partner Function</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Partner Counter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bosch Partner: Partner Functions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>