force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/chk_DefaultPartner__c.field-meta.xml
<CustomField>
    <fullName>chk_DefaultPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to define a Partner Function as Default</description>
    <inlineHelpText>Default Partner Function</inlineHelpText>
    <label>Default Partner</label>
    <type>Checkbox</type>
</CustomField>