force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/lkp_BoschPartnerFunction__c.field-meta.xml
<CustomField>
    <fullName>lkp_BoschPartnerFunction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bosch Partner Function</label>
    <referenceTo>BoschPartnerFunction__c</referenceTo>
    <relationshipLabel>Bosch Partner: Partner Functions</relationshipLabel>
    <relationshipName>BoschPartnerPartnerFunctions</relationshipName>
    <type>Lookup</type>
</CustomField>