force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/lkp_SalesDataCustomer__c.field-meta.xml
<CustomField>
    <fullName>lkp_SalesDataCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Data Customer</label>
    <referenceTo>SalesAreaLink__c</referenceTo>
    <relationshipLabel>Bosch Partner: Partner Functions</relationshipLabel>
    <relationshipName>BoschPartner_PartnerFunctions</relationshipName>
    <type>Lookup</type>
</CustomField>