force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/mdr_BoschPartnerFunction__c.field-meta.xml
<CustomField>
    <fullName>mdr_BoschPartnerFunction__c</fullName>
    <label>Bosch Partner Function</label>
    <referenceTo>BoschPartnerFunction__c</referenceTo>
    <relationshipLabel>Bosch Partner: Partner Functions</relationshipLabel>
    <relationshipName>BoschPartnerPartnerFunction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>