force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/ReferencedAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferencedAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referenced Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bosch Partner: Partner Functions</relationshipLabel>
    <relationshipName>BoschPartner_PartnerFunctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>