force-app/main/default/objects/BoschPartner_PartnerFunction__c/fields/txt_PartnerCounter__c.field-meta.xml
<CustomField>
    <fullName>txt_PartnerCounter__c</fullName>
    <label>Partner Counter</label>
    <length>8</length>
    <type>Text</type>
</CustomField>